mdmCeneveo/src/objects/Customer_Banking__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Notes__c</fullName>
        <label>Bank Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party Relationship</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>Customer Bankings</relationshipLabel>
        <relationshipName>Customer_Bankings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SWIFT_Number__c</fullName>
        <label>SWIFT Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_From_Date__c</fullName>
        <label>Valid From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To_Date__c</fullName>
        <label>Valid To  Date</label>
        <type>Date</type>
    </fields>
    <label>Customer Banking</label>
    <nameField>
        <displayFormat>Banking-{0000}</displayFormat>
        <label>Customer Banking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Bankings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>